--- a/config.sample.yml
+++ b/config.sample.yml
@@ -1,3 +1,3 @@
 bills_folder: ./bills
-main_billcount_file: company-finances.beancount
+main_beancount_file: company-finances.beancount
 server_port: 3030
